--- a/content/publications.html
+++ b/content/publications.html
@@ -80,9 +80,6 @@ nocite: '@*'
 <div id="ref-cravenOpenNaheleOpenHawaiian2018">
 <p>Craven, Dylan, Tiffany M Knight, Kasey E Barton, Lalasia Bialic-Murphy, Susan Cordell, Christian P Giardina, Thomas W Gillespie, Rebecca Ostertag, Lawren Sack, and Jonathan M Chase. 2018. “OpenNahele: The Open Hawaiian Forest Plot Database.” <em>Biodiversity Data Journal</em> 6 (September): e28406. <a href="https://doi.org/10.3897/BDJ.6.e28406">https://doi.org/10.3897/BDJ.6.e28406</a>.</p>
 </div>
-<div id="ref-Craven769232">
-<p>Craven, Dylan, Masha van der Sande, Carsten Meyer, Katharina Gerstner, Joanne M Bennett, Darren P Giling, Jes Hines, et al. 2019. “A Cross-Scale Assessment of Productivity-Diversity Relationships.” <em>bioRxiv</em>. <a href="https://doi.org/10.1101/769232">https://doi.org/10.1101/769232</a>.</p>
-</div>
 <div id="ref-cravenUnseenInvadersIntroduced2017">
 <p>Craven, Dylan, Madhav P. Thakur, Erin K. Cameron, Lee E. Frelich, Robin Beauséjour, Robert B. Blair, Bernd Blossey, et al. 2017. “The Unseen Invaders: Introduced Earthworms as Drivers of Change in Plant Communities in North American Forests (a Meta‐analysis).” <em>Global Change Biology</em> 23 (3): 1065–74. <a href="https://doi.org/10.1111/gcb.13446">https://doi.org/10.1111/gcb.13446</a>.</p>
 </div>
@@ -107,8 +104,8 @@ nocite: '@*'
 <div id="ref-guerrero-ramirezDiversitydependentTemporalDivergence2017">
 <p>Guerrero-Ramírez, Nathaly R., Dylan Craven, Peter B. Reich, John J. Ewel, Forest Isbell, Julia Koricheva, John A. Parrotta, et al. 2017. “Diversity-Dependent Temporal Divergence of Ecosystem Functioning in Experimental Ecosystems.” <em>Nature Ecology &amp; Evolution</em> 1 (11): 1639–42. <a href="https://doi.org/10.1038/s41559-017-0325-1">https://doi.org/10.1038/s41559-017-0325-1</a>.</p>
 </div>
-<div id="ref-guzman-jacobEffectsForestuseIntensity2019">
-<p>Guzmán‐Jacob, Valeria, Gerhard Zotz, Dylan Craven, Amanda Taylor, Thorsten Krömer, María Leticia Monge‐González, and Holger Kreft. 2019. “Effects of Forest-Use Intensity on Vascular Epiphyte Diversity Along an Elevational Gradient.” <em>Diversity and Distributions</em> 0 (0). <a href="https://doi.org/10.1111/ddi.12992">https://doi.org/10.1111/ddi.12992</a>.</p>
+<div id="ref-guzman-jacobEffectsForestuseIntensity2020">
+<p>Guzmán-Jacob, Valeria, Gerhard Zotz, Dylan Craven, Amanda Taylor, Thorsten Krömer, María Leticia Monge-González, and Holger Kreft. 2020. “Effects of Forest-Use Intensity on Vascular Epiphyte Diversity Along an Elevational Gradient.” <em>Diversity and Distributions</em> 26 (1): 4–15. <a href="https://doi.org/10.1111/ddi.12992">https://doi.org/10.1111/ddi.12992</a>.</p>
 </div>
 <div id="ref-isbellBiodiversityIncreasesResistance2015">
 <p>Isbell, Forest, Dylan Craven, John Connolly, Michel Loreau, Bernhard Schmid, Carl Beierkuhnlein, T. Martijn Bezemer, et al. 2015. “Biodiversity Increases the Resistance of Ecosystem Productivity to Climate Extremes.” <em>Nature</em> 526 (7574): 574–77. <a href="http://dx.doi.org/10.1038/nature15374">http://dx.doi.org/10.1038/nature15374</a>.</p>
@@ -116,14 +113,17 @@ nocite: '@*'
 <div id="ref-letcherEnvironmentalGradientsEvolution2015">
 <p>Letcher, Susan G., Jesse R. Lasky, Robin L. Chazdon, Natalia Norden, S. Joseph Wright, Jorge A. Meave, Eduardo A. Pérez-García, et al. 2015. “Environmental Gradients and the Evolution of Successional Habitat Specialization: A Test Case with 14 Neotropical Forest Sites.” <em>Journal of Ecology</em> 103 (5): 1276–90. <a href="https://doi.org/10.1111/1365-2745.12435">https://doi.org/10.1111/1365-2745.12435</a>.</p>
 </div>
-<div id="ref-monge-gonzalezResponseTreeDiversity2019">
-<p>Monge‐González, María Leticia, Dylan Craven, Thorsten Krömer, Gonzalo Castillo‐Campos, Alejandro Hernández‐Sánchez, Valeria Guzmán‐Jacob, Nathaly Guerrero‐Ramírez, and Holger Kreft. 2019. “Response of Tree Diversity and Community Composition to Forest-Use Intensity Along a Tropical Elevational Gradient.” <em>Applied Vegetation Science</em>. <a href="https://doi.org/10.1111/avsc.12465">https://doi.org/10.1111/avsc.12465</a>.</p>
+<div id="ref-doi:10.1111/avsc.12465">
+<p>Monge-González, María Leticia, Dylan Craven, Thorsten Krömer, Gonzalo Castillo-Campos, Alejandro Hernández-Sánchez, Valeria Guzmán-Jacob, Nathaly Guerrero-Ramírez, and Holger Kreft. 2020. “Response of Tree Diversity and Community Composition to Forest Use Intensity Along a Tropical Elevational Gradient.” <em>Applied Vegetation Science</em> n/a (n/a). <a href="https://doi.org/10.1111/avsc.12465">https://doi.org/10.1111/avsc.12465</a>.</p>
 </div>
 <div id="ref-paulFoliarHerbivoryLeaf2011">
 <p>Paul, Gillian, Florencia Montagnini, Graeme Berlyn, Dylan Craven, Michiel van Breugel, and Jefferson Hall. 2011. “Foliar Herbivory and Leaf Traits of Five Native Tree Species in a Young Plantation of Central Panama.” <em>New Forests</em>, 1–19. <a href="https://doi.org/10.1007/s11056-011-9267-7">https://doi.org/10.1007/s11056-011-9267-7</a>.</p>
 </div>
 <div id="ref-piottoSilviculturalEconomicAspects2010">
 <p>Piotto, Daniel, Dylan Craven, Florencia Montagnini, and Federico Alice. 2010. “Silvicultural and Economic Aspects of Pure and Mixed Native Tree Species Plantations on Degraded Pasturelands in Humid Costa Rica.” <em>New Forests</em> 39 (3): 369–85. <a href="https://doi.org/10.1007/s11056-009-9177-0">https://doi.org/10.1007/s11056-009-9177-0</a>.</p>
+</div>
+<div id="ref-10.1371/journal.pone.0226474">
+<p>Piotto, Daniel, Dylan Craven, Florencia Montagnini, Mark Ashton, Chadwick Oliver, and William Wayt Thomas. 2019. “Successional, Spatial, and Seasonal Changes in Seed Rain in the Atlantic Forest of Southern Bahia, Brazil.” <em>PLOS ONE</em> 14 (12): 1–15. <a href="https://doi.org/10.1371/journal.pone.0226474">https://doi.org/10.1371/journal.pone.0226474</a>.</p>
 </div>
 <div id="ref-poorterBiomassResilienceNeotropical2016">
 <p>Poorter, Lourens, Frans Bongers, T. Mitchell Aide, Angélica M. Almeyda Zambrano, Patricia Balvanera, Justin M. Becknell, Vanessa Boukili, et al. 2016. “Biomass Resilience of Neotropical Secondary Forests.” <em>Nature</em> 530 (7589): 211–14. <a href="http://dx.doi.org/10.1038/nature16512">http://dx.doi.org/10.1038/nature16512</a>.</p>
@@ -140,8 +140,8 @@ nocite: '@*'
 <div id="ref-salasModelacionCrecimientoBosques2016">
 <p>Salas, Christian, Timothy G Gregoire, Dylan J Craven, and Horacio Gilabert. 2016. “Modelacion del crecimiento de bosques: estado del arte.” <em>Bosque (Valdivia)</em> 37: 03–12. <a href="https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-92002016000100001&amp;nrm=iso">https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-92002016000100001&amp;nrm=iso</a>.</p>
 </div>
-<div id="ref-sandelCurrentClimateIsolation2019">
-<p>Sandel, Brody, Patrick Weigelt, Holger Kreft, Gunnar Keppel, Masha T. van der Sande, Sam Levin, Stephen Smith, Dylan Craven, and Tiffany M. Knight. 2019. “Current Climate, Isolation and History Drive Global Patterns of Tree Phylogenetic Endemism.” <em>Global Ecology and Biogeography</em> 0 (0). <a href="https://doi.org/10.1111/geb.13001">https://doi.org/10.1111/geb.13001</a>.</p>
+<div id="ref-sandelCurrentClimateIsolation2020">
+<p>Sandel, Brody, Patrick Weigelt, Holger Kreft, Gunnar Keppel, Masha T. van der Sande, Sam Levin, Stephen Smith, Dylan Craven, and Tiffany M. Knight. 2020. “Current Climate, Isolation and History Drive Global Patterns of Tree Phylogenetic Endemism.” <em>Global Ecology and Biogeography</em> 29 (1): 4–15. <a href="https://doi.org/10.1111/geb.13001">https://doi.org/10.1111/geb.13001</a>.</p>
 </div>
 <div id="ref-schulzePositiveAssociationForest2019">
 <p>Schulze, Ernst Detlef, Dylan Craven, Andrew M. Durso, Jiri Reif, Marcus Guderle, Franz Kroiher, Petra Hennig, et al. 2019. “Positive Association Between Forest Management, Environmental Change, and Forest Bird Abundance.” <em>Forest Ecosystems</em> 6 (1): 3. <a href="https://doi.org/10.1186/s40663-019-0160-8">https://doi.org/10.1186/s40663-019-0160-8</a>.</p>
