--- a/content/publications.html
+++ b/content/publications.html
@@ -110,11 +110,14 @@ nocite: '@*'
 <div id="ref-isbellBiodiversityIncreasesResistance2015">
 <p>Isbell, Forest, Dylan Craven, John Connolly, Michel Loreau, Bernhard Schmid, Carl Beierkuhnlein, T. Martijn Bezemer, et al. 2015. “Biodiversity Increases the Resistance of Ecosystem Productivity to Climate Extremes.” <em>Nature</em> 526 (7574): 574–77. <a href="http://dx.doi.org/10.1038/nature15374">http://dx.doi.org/10.1038/nature15374</a>.</p>
 </div>
+<div id="ref-kattgeTRYPlantTrait2020">
+<p>Kattge, Jens, Gerhard Bönisch, Sandra Díaz, Sandra Lavorel, Iain Colin Prentice, Paul Leadley, Susanne Tautenhahn, et al. 2020. “TRY Plant Trait Database – Enhanced Coverage and Open Access.” <em>Global Change Biology</em> 26 (1): 119–88. <a href="https://doi.org/10.1111/gcb.14904">https://doi.org/10.1111/gcb.14904</a>.</p>
+</div>
 <div id="ref-letcherEnvironmentalGradientsEvolution2015">
 <p>Letcher, Susan G., Jesse R. Lasky, Robin L. Chazdon, Natalia Norden, S. Joseph Wright, Jorge A. Meave, Eduardo A. Pérez-García, et al. 2015. “Environmental Gradients and the Evolution of Successional Habitat Specialization: A Test Case with 14 Neotropical Forest Sites.” <em>Journal of Ecology</em> 103 (5): 1276–90. <a href="https://doi.org/10.1111/1365-2745.12435">https://doi.org/10.1111/1365-2745.12435</a>.</p>
 </div>
 <div id="ref-doi:10.1111/avsc.12465">
-<p>Monge-González, María Leticia, Dylan Craven, Thorsten Krömer, Gonzalo Castillo-Campos, Alejandro Hernández-Sánchez, Valeria Guzmán-Jacob, Nathaly Guerrero-Ramírez, and Holger Kreft. 2020. “Response of Tree Diversity and Community Composition to Forest Use Intensity Along a Tropical Elevational Gradient.” <em>Applied Vegetation Science</em> n/a (n/a). <a href="https://doi.org/10.1111/avsc.12465">https://doi.org/10.1111/avsc.12465</a>.</p>
+<p>Monge-González, María Leticia, Dylan Craven, Thorsten Krömer, Gonzalo Castillo-Campos, Alejandro Hernández-Sánchez, Valeria Guzmán-Jacob, Nathaly Guerrero-Ramírez, and Holger Kreft. 2020. “Response of Tree Diversity and Community Composition to Forest Use Intensity Along a Tropical Elevational Gradient.” <em>Applied Vegetation Science</em> 23 (1): 69–79. <a href="https://doi.org/10.1111/avsc.12465">https://doi.org/10.1111/avsc.12465</a>.</p>
 </div>
 <div id="ref-paulFoliarHerbivoryLeaf2011">
 <p>Paul, Gillian, Florencia Montagnini, Graeme Berlyn, Dylan Craven, Michiel van Breugel, and Jefferson Hall. 2011. “Foliar Herbivory and Leaf Traits of Five Native Tree Species in a Young Plantation of Central Panama.” <em>New Forests</em>, 1–19. <a href="https://doi.org/10.1007/s11056-011-9267-7">https://doi.org/10.1007/s11056-011-9267-7</a>.</p>
