--- a/content/publications.html
+++ b/content/publications.html
@@ -10,6 +10,7 @@ nocite: '@*'
 
 <p><a href="https://scholar.google.com/citations?user=rz2vROgAAAAJ&amp;hl=en&amp;authuser=1">Google Scholar</a>|
 <a href="https://publons.com/researcher/313540/dylan-craven/">Publons</a></p>
+<p>If you don’t have access to a PDF, please send me an e-mail!</p>
 <div id="refs" class="references">
 <div id="ref-battermanKeyRoleSymbiotic2013">
 <p>Batterman, S. A., L. O. Hedin, M. van Breugel, J. Ransijn, D. J. Craven, and J. S. Hall. 2013. “Key Role of Symbiotic Dinitrogen Fixation in Tropical Forest Secondary Succession.” <em>Nature</em> 502 (7470): 224–7. <a href="https://doi.org/10.1038/nature12525">https://doi.org/10.1038/nature12525</a>.</p>
@@ -45,7 +46,7 @@ nocite: '@*'
 <p>Chazdon, Robin L., Eben N. Broadbent, Danaë M. A. Rozendaal, Frans Bongers, Angélica María Almeyda Zambrano, T. Mitchell Aide, Patricia Balvanera, et al. 2016. “Carbon Sequestration Potential of Second-Growth Forest Regeneration in the Latin American Tropics.” <em>Science Advances</em> 2 (5). <a href="https://doi.org/10.1126/sciadv.1501639">https://doi.org/10.1126/sciadv.1501639</a>.</p>
 </div>
 <div id="ref-cravenWithinsiteComparisonsStructural2007">
-<p>Craven, D., D. Braden, M. S. Ashton, G. P. Berlyn, M. Wishnie, and D. Dent. 2007. “Between and Within-Site Comparisons of Structural and Physiological Characteristics and Foliar Nutrient Content of 14 Tree Species at a Wet, Fertile Site and a Dry, Infertile Site in Panama.” <em>Forest Ecology and Management</em> 238 (1): 335–46. <a href="http://www.sciencedirect.com/science/article/B6T6X-4MFK42N-4/2/193f42b147e60a7eccebcece7b22a44c">http://www.sciencedirect.com/science/article/B6T6X-4MFK42N-4/2/193f42b147e60a7eccebcece7b22a44c</a>.</p>
+<p>Craven, D., D. Braden, M. S. Ashton, G. P. Berlyn, M. Wishnie, and D. Dent. 2007. “Between and Within-Site Comparisons of Structural and Physiological Characteristics and Foliar Nutrient Content of 14 Tree Species at a Wet, Fertile Site and a Dry, Infertile Site in Panama.” <em>Forest Ecology and Management</em> 238 (1-3): 335–46. <a href="http://www.sciencedirect.com/science/article/B6T6X-4MFK42N-4/2/193f42b147e60a7eccebcece7b22a44c">http://www.sciencedirect.com/science/article/B6T6X-4MFK42N-4/2/193f42b147e60a7eccebcece7b22a44c</a>.</p>
 </div>
 <div id="ref-cravenSeasonalVariabilityPhotosynthetic2011">
 <p>Craven, D., D. Dent, D. Braden, M. S. Ashton, G. P. Berlyn, and J. S. Hall. 2011. “Seasonal Variability of Photosynthetic Characteristics Influences Growth of Eight Tropical Tree Species at Two Sites with Contrasting Precipitation in Panama.” <em>Forest Ecology and Management</em> 261 (10): 1643–53. <a href="https://doi.org/10.1016/j.foreco.2010.09.017">https://doi.org/10.1016/j.foreco.2010.09.017</a>.</p>
@@ -141,7 +142,7 @@ nocite: '@*'
 <p>Ramírez, J. A., J. D. León-Peláez, D. Craven, D. A. Herrera, C. M. Zapata, M. I. González-Hernández, J. Gallardo-Lancho, and W. Osorio. 2014. “Effects on Nutrient Cycling of Conifer Restoration in a Degraded Tropical Montane Forest.” <em>Plant and Soil</em> 378 (1): 215–26. <a href="https://doi.org/10.1007/s11104-014-2024-x">https://doi.org/10.1007/s11104-014-2024-x</a>.</p>
 </div>
 <div id="ref-salasModelacionCrecimientoBosques2016">
-<p>Salas, Christian, Timothy G Gregoire, Dylan J Craven, and Horacio Gilabert. 2016. “Modelacion del crecimiento de bosques: estado del arte.” <em>Bosque (Valdivia)</em> 37: 03–12. <a href="https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-92002016000100001&amp;nrm=iso">https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-92002016000100001&amp;nrm=iso</a>.</p>
+<p>Salas, Christian, Timothy G Gregoire, Dylan J Craven, and Horacio Gilabert. 2016. “Modelacion Del Crecimiento de Bosques: Estado Del Arte.” <em>Bosque (Valdivia)</em> 37: 03–12. <a href="https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-92002016000100001&amp;nrm=iso">https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-92002016000100001&amp;nrm=iso</a>.</p>
 </div>
 <div id="ref-sandelCurrentClimateIsolation2020">
 <p>Sandel, Brody, Patrick Weigelt, Holger Kreft, Gunnar Keppel, Masha T. van der Sande, Sam Levin, Stephen Smith, Dylan Craven, and Tiffany M. Knight. 2020. “Current Climate, Isolation and History Drive Global Patterns of Tree Phylogenetic Endemism.” <em>Global Ecology and Biogeography</em> 29 (1): 4–15. <a href="https://doi.org/10.1111/geb.13001">https://doi.org/10.1111/geb.13001</a>.</p>
